--- a/_data/about.yml
+++ b/_data/about.yml
@@ -13,9 +13,9 @@ me:
       link: "#"
     -
       label: Email
-      value: example@gmail.com
+      value: nsaqib1995@gmail.com
       icon: mail-outline
-      link: "mailto:example@gmail.com"
+      link: "mailto:nsaqib1995@gmail.com"
     -
       label: phone
       value: +880 1521 308198
