--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -74,7 +74,7 @@ sections:
         title: Khulna University of Engineering & Technology (KUET), Khulna, Bangladesh.
         period: 2012 - 2018
         Degree: Bachelor of Science
-        text: Department of Electronics & COmmunication Engineering.
+        text: Department of Electronics & Communication Engineering.
         links: 
 
       -
