--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,6 +1,6 @@
 me:
   name: Nazmus Saqib
-  designation: MS Student \" Chosun University, Korea. 
+  designation: MS Student <br/> Chosun University, Korea. 
   image: /assets/images/avatar.jpg
   description: 
     - I've currently completed the Masters degree in Computer Engineering at Chosun University, advised by Prof. Ho Yub Jung. Also, I'm employed as a Graduate Research Assistant at Computer Vision Lab of Chosun University.    
