--- a/_data/about.yml
+++ b/_data/about.yml
@@ -18,9 +18,9 @@ me:
       link: "mailto:nsaqib1995@gmail.com"
     -
       label: phone
-      value: +880 1521 308198
+      value: 010-4363-6602
       icon: phone-portrait-outline
-      link: "tel:+8801521308198"
+      link: "tel:01043636602"
 
   socials:
     - 
