--- a/_data/about.yml
+++ b/_data/about.yml
@@ -35,5 +35,8 @@ me:
     - 
       link: https://scholar.google.com/citations?hl=en&user=nGSsiD8AAAAJ
       icon: school
+    -
+      link: 
+      icon: CV
     
 
