--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -89,15 +89,13 @@ sections:
       -
         title: Chosun University, Gwangju, South Korea. 
         period: 2021-2022
-        Degree: Masters in Science
-        text: Department of Computer Engineering.
+        text: Masters in Computer Engineering.
         links: 
 
       -
         title: Khulna University of Engineering & Technology (KUET), Khulna, Bangladesh.
         period: 2012 - 2018
-        Degree: Bachelor of Science
-        text: Department of Electronics & Communication Engineering.
+        text: Bachelor of Science in Electronics & Communication Engineering.
         links: 
 
       -
