--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -28,11 +28,11 @@ sections:
       -
         title: Semi-supervised atmospheric component learning in low-light image problem
         text: Masud An Nur Islam Fahim, <b> Nazmus Saqib </b>, Ho Yub Jung <br/>
-              <i> arXiv preprint arXiv:2204.07546, 2022. </i>
+              <i>PLoS ONE 18(3): e0282674. https://doi.org/10.1371/journal.pone.0282674 </i>
         links: 
           - 
             label: Paper
-            link: https://arxiv.org/abs/2204.07546
+            link: https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0282674
           -
             label: Code and dataset
             link: https://github.com/saqibnazmus/lowlight_semi
