--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,7 +1,7 @@
 me:
   name: Nazmus Saqib
   designation: Graduate Research Assistant <br/> Computer Vision Lab <br/> Chosun University, South Korea. 
-  image: /assets/images/avatar.jpg
+  image: /assets/images/IMG_OWN_Recent.jpg
   description: 
     - I've currently completed the Masters degree in Computer Engineering at Chosun University, advised by Prof. Ho Yub Jung. Also, I'm employed as a Graduate Research Assistant at Computer Vision Lab of Chosun University.    
     - My resreach interests include computer vision, self-supervised learning in low-level vision tasks, biomedical imaging, and explainable-AI (XAI). 
@@ -18,9 +18,9 @@ me:
       link: "mailto:nsaqib1995@gmail.com"
     -
       label: phone
-      value: 010-4363-6602
+      value: +88017667450740
       icon: phone-portrait-outline
-      link: "tel:01043636602"
+      link: "tel:01766750740"
 
   socials:
     - 
