--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -28,7 +28,7 @@ sections:
       -
         title: Semi-supervised atmospheric component learning in low-light image problem
         text: Masud An Nur Islam Fahim, <b> Nazmus Saqib </b>, Ho Yub Jung <br/>
-              <i>PLoS ONE 18(3): e0282674. https://doi.org/10.1371/journal.pone.0282674 </i>
+             <i>PLoS ONE 18(3), e0282674. https://doi.org/10.1371/journal.pone.0282674 </i>
         links: 
           - 
             label: Paper
