--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,9 +1,11 @@
 me:
   name: Nazmus Saqib
-  designation: Graduate Research Assistant <br/> Computer Vision Lab <br/> Chosun University, South Korea. 
+  designation: Researcher <br/> Visual Graphics \& Computing Lab <br/> Jeju National University, South Korea. 
   image: avatar_1.jpg
   description: 
-    - I've currently completed the Masters degree in Computer Engineering at Chosun University, advised by Prof. Ho Yub Jung. Also, I'm employed as a Graduate Research Assistant at Computer Vision Lab of Chosun University.    
+    - I am now enrolled as a Researcher of Visual Graphics and Computing Lab at Jeju National University, South Korea.
+    - I've currently completed the Masters degree in Computer Engineering at Chosun University, advised by Prof. Ho Yub Jung. 
+    - Also, I'm employed as a Graduate Research Assistant at Computer Vision Lab of Chosun University.    
     - My resreach interests include computer vision, self-supervised learning in low-level vision tasks, biomedical imaging, and explainable-AI (XAI). 
   contacts:
     -
