--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,6 +1,6 @@
 me:
   name: Nazmus Saqib
-  designation: Researcher <br/> Visual Graphics \& Computing Lab <br/> Jeju National University, South Korea. 
+  designation: Researcher <br/> Visual Graphics & Computing Lab <br/> Jeju National University, South Korea. 
   image: avatar_1.jpg
   description: 
     - I am now enrolled as a Researcher of Visual Graphics and Computing Lab at Jeju National University, South Korea.
