--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -4,7 +4,7 @@ sections:
     icon: book-outline
     items:
       -
-        title: STAM: Zero-shot Style Transfer using Diffusion Model via Attention Modulation
+        title: STAM Zero-shot Style Transfer using Diffusion Model via Attention Modulation
         text: <i>CVPR 2025</i>
         links:
           -
