--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -5,7 +5,8 @@ sections:
     items:
       -
         title: STAM Zero-shot Style Transfer using Diffusion Model via Attention Modulation
-        text: <i>CVPR 2025</i>
+        text:  Masud An Nur Islam Fahim, <b> Nazmus Saqib </b>, Shafkat Khan Siam, Ho Yub Jung <br/>
+        <i>The IEEE / CVF Computer Vision and Pattern Recognition Conference (CVPR 2025).</i>
         links:
           -
             label: Website
@@ -16,6 +17,7 @@ sections:
         
       -
         title: CasF A cascaded feature fusion CNN for fingerprint liveness detection
+        text: <b> Nazmus Saqib </b>, Jihun Kang, Soo Kyun Kim, Joon-Min Gil
         text: <i>Under review</i>
         links:
           -
@@ -81,6 +83,14 @@ sections:
         text: <b> Nazmus Saqib </b>, G.M. Rafiquzzaman <br/>
               <i> 2020 IEEE Region 10 Symposium (TENSYMP), 31-35. </i>
         links: 
+          -
+            label: Paper
+            link: https://ieeexplore.ieee.org/abstract/document/9230585
+      -
+         title: Regional Power Demand Forecasting Using BiLSTM and ConvBiLSTM Models for Sustainable Energy Management
+         text: <b> Nazmus Saqib </b>, G.M. Rafiquzzaman <br/>
+              <i> 2024 International Conference on Engineering and Emerging Technologies (ICEET) </i>
+         links: 
           -
             label: Paper
             link: https://ieeexplore.ieee.org/abstract/document/9230585
