--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -6,7 +6,7 @@ sections:
       -
         title: STAM Zero-shot Style Transfer using Diffusion Model via Attention Modulation
         text:  Masud An Nur Islam Fahim, <b> Nazmus Saqib </b>, Shafkat Khan Siam, Ho Yub Jung <br/>
-        <i>The IEEE / CVF Computer Vision and Pattern Recognition Conference (CVPR 2025).</i>
+        <i>The IEEE CVF Computer Vision and Pattern Recognition Conference (CVPR 2025).</i>
         links:
           -
             label: Website
